static/css/uwp.style.css
* {
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	margin: 0;
	padding: 0;

	font-family: inherit;
}


body {
	font-family: Segoe UI, Segoe MDL2 Assets;
	font-size: 15px;
	line-height: 1.5;

	height: 100vh;

	display: flex;

	overflow: hidden;
}
body[data-layoutType="tabs"],
body[data-layoutType="overlay"] {
	flex-direction: column;
}
body[data-layoutType="docked-minimized"] {
	flex-direction: row;
}


h1 {
	display: none;
}
h2 {
	display: none;
}
h3, h4, h5 {
	color: black;
	font-weight: 300;
}
h3:not(:first-child), h4:not(:first-child), h5:not(:first-child) {
	margin-top: 0.5em;
}
h3 {
	font-size: 34px;
}
h4 {
	font-size: 24px;
}
h5 {
	font-size: 20px;
}


img {
	max-width: 100%;
}


/* Top level navigation */
header {
	position: relative;
	z-index: 1;
}
	header nav {
	}
		header nav ul {
		}
			header nav ul li {
				display: block;
			}
				header nav ul li a {
					text-decoration: none;
					color: inherit;
				}

[data-layoutType="tabs"] header {
	width: 100%;
	background: rgb(230, 230, 230);
	color: rgb(92, 92, 92);
}
[data-layoutType="tabs"].theme-light header {
	color: rgba(0, 0, 0, 0.6); /* 92, 92, 92 */
}
[data-layoutType="tabs"].theme-dark header {
	color: rgba(255, 255, 255, 1);
}
	/* Hide all unsupported navs */
	[data-layoutType="tabs"] header nav {
		display: none;
	}
	/* ...but show the supported one */
	[data-layoutType="tabs"] header nav:nth-of-type(1) {
		width: 100%;
		height: 100%;
		font-size: 12px;

		display: flex;
		justify-content: center;
	}
		[data-layoutType="tabs"] header nav:nth-of-type(1) ul {
			height: 100%;

			flex-shrink: 1;

			display: flex;
		}
			[data-layoutType="tabs"] header nav:nth-of-type(1) ul li {
				width: 84px;
				height: 100%;
				border-bottom: 2px solid transparent;
			}
			[data-layoutType="tabs"] header nav:nth-of-type(1) ul li.active {
				color: rgb(0, 120, 215);
				border-bottom-color: rgb(0, 120, 215);
			}
			[data-layoutType="tabs"] header nav:nth-of-type(1) ul li:not(.active):hover {
				background-color: rgb(205, 205, 205);
			}
			[data-layoutType="tabs"].theme-light header nav:nth-of-type(1) ul li:not(.active):hover {
				background-color: rgba(0, 0, 0, 0.1);
			}
			[data-layoutType="tabs"].theme-dark header nav:nth-of-type(1) ul li:not(.active):hover {
				background-color: rgba(255, 255, 255, 0.1);
			}
				[data-layoutType="tabs"] header nav:nth-of-type(1) ul li a {
					width: 100%;
					height: 100%;

					display: block;
					padding: 10px;
					text-align: center;
				}
					[data-layoutType="tabs"] header nav:nth-of-type(1) ul li a span {
						width: 20px;
						height: 20px;

						display: block;
						margin: 0 auto;
						margin-bottom: 4px;

						font-size: 16px;
					}

[data-layoutType="overlay"] header {
	width: 100%;
	height: 44px;
	background: rgb(250, 250, 250);
	color: rgb(50, 50, 50);

	display: flex;
    flex-shrink: 0;
}
[data-layoutType="overlay"].theme-light header {
	color: rgba(0, 0, 0, 0.78); /* 50, 50, 50 */
}
[data-layoutType="overlay"].theme-dark header {
	color: rgba(255, 255, 255, 1);
}
	[data-layoutType="overlay"] header > span {
		height: 24px;
		margin: 10px 0;
		padding-left: 14px;
		border-left: 1px solid rgb(200, 200, 200);

		flex-grow: 1;

		text-transform: uppercase;
		font-size: 15px;
		font-weight: 700;
		line-height: 24px;
	}
	[data-layoutType="overlay"].theme-light header > span {
		border-left-color: rgba(0, 0, 0, 0.2);
	}
	[data-layoutType="overlay"].theme-dark header > span {
		border-left-color: rgba(255, 255, 255, 0.4);
	}
	[data-layoutType="overlay"] header button {
		width: 44px;
		height: 44px;
		border: 0;
		outline: none;
		background-color: transparent;
		vertical-align: top;
		position: relative;
		z-index: 2;

		font-size: 20px;
		color: inherit;
	}
	[data-layoutType="overlay"] header button:hover {
		background-color: rgb(218, 218, 218);
	}
	[data-layoutType="overlay"].theme-light header button:hover {
		background-color: rgba(0, 0, 0, 0.1);
	}
	[data-layoutType="overlay"].theme-dark header button:hover {
		background-color: rgba(255, 255, 255, 0.1);
	}
	[data-layoutType="overlay"] header nav:nth-of-type(1) {
		width: 250px;
		padding-top: 44px;
		background: rgb(230, 230, 230);
		transition: left 350ms cubic-bezier(0.1, 0.9, 0.2, 1);

		position: fixed;
		top: 0;
		left: -250px;
		bottom: 0;
		z-index: 1;

		display: flex;
		flex-direction: column;

		font-size: 15px;
	}
	[data-layoutType="overlay"] header nav:nth-of-type(1).active {
		left: 0;
	}
		[data-layoutType="overlay"] header nav:nth-of-type(1) ul {
			width: 100%;
		}
		/* Fills the space to push the last menu to the very bottom */
		[data-layoutType="overlay"] header nav:nth-of-type(1) ul:nth-last-of-type(2) {
			flex-grow: 1;
		}
		[data-layoutType="overlay"] header nav:nth-of-type(1) ul:last-of-type {
			flex-shrink: 1;
		}
		[data-layoutType="overlay"] header nav:nth-of-type(1) ul:not(:first-of-type) {
			border-top: 1px solid rgb(200, 200, 200);
			margin-top: 10px;
			padding-top: 10px;
		}
			[data-layoutType="overlay"] header nav:nth-of-type(1) ul li {
				width: 100%;
				height: 44px;

				line-height: 0; /* Edge fix */
			}
			[data-layoutType="overlay"] header nav:nth-of-type(1) ul li.active {
				color: white;
				background-color: rgb(0, 120, 215);
			}
			[data-layoutType="overlay"].active-light header nav:nth-of-type(1) ul li.active {
				color: black;
			}
			[data-layoutType="overlay"].active-dark header nav:nth-of-type(1) ul li.active {
				color: white;
			}
			[data-layoutType="overlay"] header nav:nth-of-type(1) ul li:not(.active):hover {
				background-color: rgb(205, 205, 205);
			}
			[data-layoutType="overlay"].theme-light header nav:nth-of-type(1) ul li:not(.active):hover {
				background-color: rgba(0, 0, 0, 0.1);
			}
			[data-layoutType="overlay"].theme-dark header nav:nth-of-type(1) ul li:not(.active):hover {
				background-color: rgba(255, 255, 255, 0.1);
			}
/* ... */

